--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   .top {
   position: fixed;
   bottom: 10px;
-  right: 14px;
+  right: 17px;
 	z-index: 1;
 	width: 40px;
   height: 40px;
@@ -55,7 +55,7 @@
                
                  
                 
-                 <a class="searchicon" href="/blog/search" style="right: auto;"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
+                 <a class="searchicon" href="/blog/search" style="right: 60px;"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
                 
                 </h3>
            
