--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
       </div>
       <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
       <footer>
-          <div id="footer" class="mastfooter">`
+          <div id="footer" class="mastfooter">
               <div class="container_body">
                 <a href="https://github.com/sanggil1107">
                     <i class="fa fa-github fa-2x" aria-hidden="true" style="color:black"></i>
