--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,14 @@
   <style>
   .top {
   position: fixed;
-  bottom: 15px;
-  right: 20px;
+  bottom: 13px;
+  right: 24px;
 	z-index: 1;
 	width: 40px;
   height: 40px;
   line-height: 40px;
   text-align: center;
-	background-color:  #acaaaa;
+	background-color:  #c5c2c2;
 	color: #000000;
 	cursor: pointer;
 	transition: all .25s ease;
@@ -55,7 +55,7 @@
                
                  
                 
-                 <a class="searchicon" href="/blog/search" style="right: 55px;"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
+                 <a class="searchicon" href="/blog/search" style="right: 54px;"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
                 
                 </h3>
            
