--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,11 +34,12 @@ MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], proces
   {% endif %}
 
   <!-- Adsense -->
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-4842709304550263",
-        enable_page_level_ads: true
-      });
-    </script>
+  
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3208066169163216",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
