--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -184,7 +184,7 @@ pre {
   white-space: pre;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f9f9f9;
+  background-color: #aaa8a8;
 }
 pre code {
   padding: 0;
