--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -168,7 +168,7 @@ code {
   padding: .25em .5em;
   font-size: 85%;
   color: #bf616a;
-  background-color: #f9f9f9;
+  background-color: #fbf9f9;
   border-radius: 3px;
 }
 pre {
@@ -184,11 +184,11 @@ pre {
   white-space: pre;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #eeeeee;
+  background-color: #f3f3f3;
 }
 pre code {
   padding: 0;
-  font-size: 100%;
+  font-size: 80%;
   color: inherit;
   background-color: transparent;
 }
