--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -184,7 +184,8 @@ pre {
   white-space: pre;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f3f3f3;
+  color: white;
+  background-color: #000000;
 }
 pre code {
   padding: 0;
