--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="post">
+  <img src="{{ post.image | prepend: site.baseurl }}" alt="{{ post.title }}" title="{{ post.title }}">
   <h3 class="post-title" style="color: black;font-size: 25px" >     
 
       {{ page.title }}
