--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,13 @@
 ---
 layout: default
 ---
-
+<style>
+  .post {
+    background-image: url( "/public/img/알고리즘/선택정렬0.png" );
+  }
+</style>
 <div class="post">
-  <img src="{{ post.image | prepend: site.baseurl }}" alt="{{ post.title }}" title="{{ post.title }}">
+    
   <h3 class="post-title" style="color: black;font-size: 25px" >     
 
       {{ page.title }}
