--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
 </style>
 -->
 <div class="post">
+  <div class="masthead">
   <div class="back">
   <h3 class="post-title" style="color: black;font-size: 25px" >     
 
@@ -21,7 +22,7 @@ layout: default
     <a href="/Category/{{ categories }}" class="post-tag">{{ categories }}</a>
   {% endfor %}
   </div>
-
+</div>
   
  
   <article>
