--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,44 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en-us">
+
+  {% include head.html %}
+  {% seo %}
+
+  <body>
+  <style>
+  .top {
+  position: fixed;
+  bottom: 13px;
+  right: 24px;
+	z-index: 1;
+	width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+	background-color:  #c5c2c2;
+	color: #000000;
+	cursor: pointer;
+	transition: all .25s ease;
+  opacity: .7;  
+
+}
+
+@media only screen and (max-width: 600px) {
+  .top {
+    bottom: 25px;
+    
+  }
+}
+
+.searchicon {
+  position: absolute;
+  top:  .8rem;
+  left: auto;
+  right: 1rem;
+  padding: .25rem .75rem;
+}
+  </style>
+
 <!--
 <style>
   .back {
@@ -8,21 +46,50 @@ layout: default
   }
 </style>
 -->
+
+
+{% include sidebar.html %}
+
+<!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+     content to avoid any CSS collisions with our real content. -->
+     <div class="wrap">
+       <div class="masthead">
+         <div class="container">
+           
+          <h3 class="masthead-title" style="color: black">
+              
+             <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
+              {{ site.tagline }} 
+             </a>
+           
+             
+            
+             <a class="searchicon" href="/blog/search" style="right: 54px;"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
+            
+            </h3>
+       
+
+         </div>
+         
+         
+       </div>
+       <div class="masthead">
+          <div class="back">
+          <h3 class="post-title" style="color: black;font-size: 25px" >     
+        
+              {{ page.title }}
+        
+          </h3>
+          <big class="post-date">{{ page.date | date_to_string }}</big>
+          <br>
+          {% for categories in page.categories %}
+            <a href="/Category/{{ categories }}" class="post-tag">{{ categories }}</a>
+          {% endfor %}
+          </div>
+        </div>
+       <div class="container content">
 <div class="post">
-  <div class="masthead">
-  <div class="back">
-  <h3 class="post-title" style="color: black;font-size: 25px" >     
 
-      {{ page.title }}
-
-  </h3>
-  <big class="post-date">{{ page.date | date_to_string }}</big>
-  <br>
-  {% for categories in page.categories %}
-    <a href="/Category/{{ categories }}" class="post-tag">{{ categories }}</a>
-  {% endfor %}
-  </div>
-</div>
   
  
   <article>
@@ -470,3 +537,107 @@ var disqus_config = function () {
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
 {% endif %}
+
+</div>
+<div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
+<footer>
+    <div id="footer" class="mastfooter">
+        <div class="container_body">
+          <a href="https://github.com/sanggil1107">
+              <i class="fa fa-github fa-2x" aria-hidden="true" style="color:black"></i>
+          </a>   
+          &nbsp;&nbsp;
+          <a href="yangpang1107@gmail.com">
+              <i class="fa fa-envelope fa-2x" aria-hidden="true" style="color: black"></i>
+          </a> 
+          &nbsp;&nbsp;
+          <a href="yangpang1107@gmail.com">
+              <i class="fa fa-rss fa-2x" aria-hidden="true" style="color: black"></i>
+          </a> 
+          <br>
+          Copyright &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+        </div>
+        <br>
+        
+        <br>
+    </div>
+  </footer>
+  <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+  {% include javascripts.html %}
+  <script>
+    $(".top").click(function() {
+    $("html, body")
+      .stop()
+      .animate({ scrollTop: 0 }, "slow", "swing");
+  });
+  $(window).scroll(function() {
+    if ($(this).scrollTop() > 400) {
+      $(".top").fadeIn();
+    } else {
+      $(".top").fadeOut();
+    }
+  });  
+  </script>
+</div>
+
+<script>
+(function(document) {
+  var toggle = document.querySelector('.sidebar-toggle');
+  var sidebar = document.querySelector('#sidebar');
+  var checkbox = document.querySelector('#sidebar-checkbox');
+  document.addEventListener('click', function(e) {
+    var target = e.target;
+    if (target === toggle) {
+      checkbox.checked = !checkbox.checked;
+      e.preventDefault();
+    } else if (checkbox.checked && !sidebar.contains(target)) {
+      /* click outside the sidebar when sidebar is open */
+      checkbox.checked = false;
+    }
+  }, false);
+})(document);
+</script>
+{% if site.google_analytics_token %}
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', '{{ site.google_analytics_token }}', 'auto');
+ga('send', 'pageview');
+</script>
+{% endif %}
+
+
+
+
+</body>
+
+{% if site.disqus_short_name %}
+<script id="dsq-count-scr" src="//{{ site.disqus_short_name }}.disqus.com/count.js" async></script>
+{% endif %}
+
+<!--Import jQuery -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+
+<script>
+// Calculate total_blogging_date_dynamically
+$(document).ready(function() {
+var date_str = "{{ site.posts.last.date }}"; // 2017-05-31 00:00:00 +0900
+var today = new Date()
+today.setHours(0,0,0,0)
+var firstday = new Date(date_str.split(' ')[0])
+firstday.setHours(0,0,0,0)
+var total_date = ((today-firstday) / 86400000)+1; // calc datediff
+$("#dynamic_day").text(total_date);
+});
+// Calculate current_date_streak dynamically
+$(document).ready(function(){
+var latest_post_date_str = "{{ site.posts.first.date }}";
+var day_passed = Math.floor((Date.now() - Date.parse(latest_post_date_str.split(' ')[0])) / 86400000);
+// if latest posting date passed a day then reset to 0
+if (day_passed > 1) {
+  $("#current_date_streak").text("0");
+}
+});
+</script>
+
+</html>
