--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ layout: default
 <div class="post">
   <div class="back">
   <h3 class="post-title" style="color: black;font-size: 25px" >     
-
-      {{ page.title }}
-
+      <font size="5">
+        {{ page.title }}
+      </font>
   </h3>
   <big class="post-date">{{ page.date | date_to_string }}</big>
   <br>
