--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -165,7 +165,7 @@ pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
 }
 code {
-  padding: .25em .5em;
+  padding: 0;
   font-size: 90%;
   color: #bf616a;
   background-color: #fbf9f9;
