--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -184,7 +184,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   color: white;
-  background-color: #000000;
+  background-color: #fbfcfd;
 }
 pre code {
   padding: 0;
