--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -183,7 +183,7 @@ pre {
   white-space: pre;
   word-break: break-all;
   word-wrap: break-word;
-  color: white;
+  color: black;
   background-color: #fbfcfd;
 }
 pre code {
