--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -44,6 +44,13 @@
               {{ sub_nav[0] }}
             </a>
             {% for tag in site.categories %}
+              {% if sub_nav[0] == 'AI & BigData' %}
+                {% if tag[0] == '데이터분석' %}
+                  <a class="sidebar-nav-item sidebar-nav-item-sub-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
+                    {{ tag | first }} ({{ tag | last | size }}) 
+                  </a>
+                {% endif %}
+              {% endif %}
               {% if sub_nav[0] == 'Web' %}
                 {% if tag[0] == 'HTML' or tag[0] == 'CSS' or tag[0] == 'JavaScript' or tag[0] == 'React' %}
                   <a class="sidebar-nav-item sidebar-nav-item-sub-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
