환경설정 수정

--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -184,7 +184,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   color: black;
-  background-color: #fbfcfd;
+  background-color: #fbf9f9;
 }
 pre code {
   padding: 0;
