--- a/_scss/component/_post.scss
+++ b/_scss/component/_post.scss
@@ -55,6 +55,7 @@
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     margin-right: -80px;
+    margin-top: -60px;
     font-size: 0.7rem;
     border-left: 2px solid #e0d9e7;
     
