--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,4 +42,9 @@ MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], proces
     enable_page_level_ads: true
   });
 </script>
+<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-FwcR4gnQAXHsS8Ih" 
+ data-ad-width   = "728" 
+ data-ad-height  = "90"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </head>
