카카오 광고 위치 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,10 @@
              
            </div>
       <div class="container content">
+      <ins class="kakao_ad_area" style="display:none;" 
+        data-ad-unit    = "DAN-FwcR4gnQAXHsS8Ih" 
+        data-ad-width   = "728" 
+        data-ad-height  = "90"></ins> 
         {{ content }}
       </div>
       <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
