카카오 광고 위치 수정

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,10 @@ layout: default
   
  
   <article class="post-article">
+    <ins class="kakao_ad_area" style="display:none;" 
+    data-ad-unit    = "DAN-FwcR4gnQAXHsS8Ih" 
+    data-ad-width   = "728" 
+    data-ad-height  = "90"></ins> 
     <div class="toc">
       {% include toc.html html=content %}
     </div>
