--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
+  <meta name="naver-site-verification" content="be05056c72872f9243a2d5c2e40dd28ac0f5c6d5" />
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
