--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,11 @@ layout: default
     data-ad-unit    = "DAN-FwcR4gnQAXHsS8Ih" 
     data-ad-width   = "728" 
     data-ad-height  = "90"></ins> 
+    <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-qyrWlNFETQBnOYnJ" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <div class="toc">
       {% include toc.html html=content %}
     </div>
