카카오 광고 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,7 @@ layout: default
  data-ad-unit    = "DAN-qyrWlNFETQBnOYnJ" 
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
+ src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
   </article>
 </div>
 <style>
