--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,9 +29,12 @@ layout: default
     data-ad-width   = "728" 
     data-ad-height  = "90"></ins> 
     
-
+    <ins class="kakao_ad_area" style="display:none;" 
+    data-ad-unit    = "DAN-qyrWlNFETQBnOYnJ" 
+    data-ad-width   = "320" 
+    data-ad-height  = "100"></ins> 
     <div class="toc">
-      {% include toc.html html=content %}
+      <!-- {% include toc.html html=content %} -->
     </div>
     {{ content }}
     <ins class="kakao_ad_area" style="display:none;" 
