--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,20 +27,25 @@ layout: default
     <ins class="kakao_ad_area" style="display:none;" 
     data-ad-unit    = "DAN-FwcR4gnQAXHsS8Ih" 
     data-ad-width   = "728" 
-    data-ad-height  = "90"></ins> 
+    data-ad-height  = "90"
+    width = "50%"></ins> 
     
     <ins class="kakao_ad_area" style="display:none;" 
     data-ad-unit    = "DAN-qyrWlNFETQBnOYnJ" 
     data-ad-width   = "320" 
-    data-ad-height  = "100"></ins> 
+    data-ad-height  = "100"
+    width = "49%"></ins> 
     <div class="toc">
-      <!-- {% include toc.html html=content %} -->
+      {% include toc.html html=content %}
     </div>
     {{ content }}
+    <br>
+    <br>
+    <br>
     <ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-qyrWlNFETQBnOYnJ" 
- data-ad-width   = "320" 
- data-ad-height  = "100"></ins> 
+ data-ad-unit    = "DAN-BHgT46zL3yCgu8No" 
+ data-ad-width   = "300" 
+ data-ad-height  = "250"></ins> 
  <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
   </article>
 </div>
