--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,13 +24,13 @@ layout: default
   
  
   <article class="post-article">
-    <ins class="kakao_ad_area" style="display:none;" 
+    <ins class="kakao_ad_area" style="display:none; width: 50%;" 
     data-ad-unit    = "DAN-FwcR4gnQAXHsS8Ih" 
     data-ad-width   = "728" 
     data-ad-height  = "90"
     width = "50%"></ins> 
     
-    <ins class="kakao_ad_area" style="display:none;" 
+    <ins class="kakao_ad_area" style="display:none; width: 49%;" 
     data-ad-unit    = "DAN-qyrWlNFETQBnOYnJ" 
     data-ad-width   = "320" 
     data-ad-height  = "100"
@@ -39,9 +39,7 @@ layout: default
       {% include toc.html html=content %}
     </div>
     {{ content }}
-    <br>
-    <br>
-    <br>
+
     <ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-BHgT46zL3yCgu8No" 
  data-ad-width   = "300" 
